[SUREFIRE-405] Make useSystemClassLoader the default.  This turned up a bug in UrlUtils/UmlautDirTest that only occurs when useSystemClassLoader=true, which I have also fixed in this check-in.
git-svn-id: https://svn.apache.org/repos/asf/maven/surefire/trunk@603083 13f79535-47bb-0310-9956-ffa450edef68